crates/sui/tests/snapshots/shell_tests__find_env__cached.sh.snap
---
source: crates/sui/tests/shell_tests.rs
description: tests/shell_tests/find_env/cached.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# If the active environment matches, use it
sui move --client.config configs/name_match_id_match.yaml build

----- results -----
success: true
exit_code: 0
----- stdout -----

----- stderr -----
BUILDING example
