crates/sui/tests/snapshots/shell_tests__find_env__explicit_bad.sh.snap
---
source: crates/sui/tests/shell_tests.rs
description: tests/shell_tests/find_env/explicit_bad.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# explicitly passed environment should be used, and we should fail if they aren't in the manifest
sui move --client.config configs/name_mismatch_id_mismatch.yaml build -e cli_arg_env

----- results -----
success: false
exit_code: 1
----- stdout -----
Environment `cli_arg_env` is not present in Move.toml

----- stderr -----
